package edu.uees.tutorias.domain;

/**
 * Estados posibles del ciclo de vida de una Reserva.
 */
public enum EstadoReserva {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA,
    REPROGRAMADA,
    COMPLETADA
}
